@@ -1,6 +1,8 @@
 Version 1.3.4+svn:
  * language and i18n:
    * updated translations: French
+ * user interface:
+   * allow unfocused widgets to steal the focus instead of just borrowing it
 
 Version 1.3.4:
  * campaigns
